# PlatformNetworks

./: .gitignore  CMakeLists.txt  Makefile  build.sh  client  readme.md  server
include/: client.h  server.h  sock_config.h  support.h  test_client.h  threads_config.h
src/cfg/: sock_config.c  support.c  threads_config.c
src/client/: client.c
src/server/: server.c
src/test_client/: test_client.c
